[gd_scene load_steps=6 format=3 uid="uid://cgtqpgne2s116"]

[ext_resource type="Script" path="res://core/ui/menu/qam/powertools_menu.gd" id="1_8v1ke"]
[ext_resource type="PackedScene" uid="uid://d1qb7euwlu7bh" path="res://core/ui/components/toggle.tscn" id="2_nb5h3"]
[ext_resource type="PackedScene" uid="uid://bsfyu747dqwcm" path="res://core/systems/input/focus_manager.tscn" id="2_v2y4s"]
[ext_resource type="PackedScene" uid="uid://cemxrvvjgm4g" path="res://core/ui/components/slider.tscn" id="2_ygeel"]
[ext_resource type="PackedScene" uid="uid://dithv38oqgy58" path="res://core/ui/components/section_label.tscn" id="3_v2d1e"]

[node name="PowerTools" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 66.0
offset_top = -116.0
offset_right = 66.0
offset_bottom = -116.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8v1ke")

[node name="FocusManager" parent="." instance=ExtResource("2_v2y4s")]

[node name="CPUSectionLabel" parent="." instance=ExtResource("3_v2d1e")]
layout_mode = 2
text = "CPU Settings:"

[node name="CPUBoostButton" parent="." instance=ExtResource("2_nb5h3")]
visible = false
layout_mode = 2
focus_neighbor_left = NodePath("../GPUTempSlider")
focus_neighbor_top = NodePath("../GPUTempSlider")
focus_neighbor_right = NodePath("../SMTButton")
focus_neighbor_bottom = NodePath("../SMTButton")
focus_next = NodePath("../SMTButton")
focus_previous = NodePath("../GPUTempSlider")
text = "CPU Boost"
separator_visible = false
button_pressed = false

[node name="SMTButton" parent="." instance=ExtResource("2_nb5h3")]
visible = false
layout_mode = 2
focus_neighbor_left = NodePath("../CPUBoostButton")
focus_neighbor_top = NodePath("../CPUBoostButton")
focus_neighbor_right = NodePath("../CPUCoresSlider")
focus_neighbor_bottom = NodePath("../CPUCoresSlider")
focus_next = NodePath("../CPUCoresSlider")
focus_previous = NodePath("../CPUBoostButton")
text = "SMT Enabled"
separator_visible = false
button_pressed = false

[node name="CPUCoresSlider" parent="." instance=ExtResource("2_ygeel")]
visible = false
layout_mode = 2
focus_neighbor_left = NodePath("../SMTButton")
focus_neighbor_top = NodePath("../SMTButton")
focus_neighbor_right = NodePath("../TDPSlider")
focus_neighbor_bottom = NodePath("../TDPSlider")
focus_next = NodePath("../TDPSlider")
focus_previous = NodePath("../SMTButton")
text = "CPU Cores"
value = 1.0
max_value = 1.0
min_value = 1.0

[node name="GPUSectionLabel" parent="." instance=ExtResource("3_v2d1e")]
layout_mode = 2
text = "GPU Settings:"

[node name="TDPSlider" parent="." instance=ExtResource("2_ygeel")]
visible = false
layout_mode = 2
focus_neighbor_left = NodePath("../CPUCoresSlider")
focus_neighbor_top = NodePath("../CPUCoresSlider")
focus_neighbor_right = NodePath("../TDPBoostSlider")
focus_neighbor_bottom = NodePath("../TDPBoostSlider")
focus_next = NodePath("../TDPBoostSlider")
focus_previous = NodePath("../CPUCoresSlider")
text = "TDP"
max_value = 0.0

[node name="TDPBoostSlider" parent="." instance=ExtResource("2_ygeel")]
visible = false
layout_mode = 2
focus_neighbor_left = NodePath("../TDPSlider")
focus_neighbor_top = NodePath("../TDPSlider")
focus_neighbor_right = NodePath("../GPUFreqButton")
focus_neighbor_bottom = NodePath("../GPUFreqButton")
focus_next = NodePath("../GPUFreqButton")
focus_previous = NodePath("../TDPSlider")
text = "TDP Boost"
max_value = 0.0

[node name="GPUFreqButton" parent="." instance=ExtResource("2_nb5h3")]
visible = false
layout_mode = 2
focus_neighbor_left = NodePath("../TDPBoostSlider")
focus_neighbor_top = NodePath("../TDPBoostSlider")
focus_neighbor_right = NodePath("../GPUFreqMinSlider")
focus_neighbor_bottom = NodePath("../GPUFreqMinSlider")
focus_next = NodePath("../GPUFreqMinSlider")
focus_previous = NodePath("../TDPBoostSlider")
text = "Manual Freq"
separator_visible = false
button_pressed = false

[node name="GPUFreqMinSlider" parent="." instance=ExtResource("2_ygeel")]
visible = false
layout_mode = 2
focus_neighbor_left = NodePath("../GPUFreqButton")
focus_neighbor_top = NodePath("../GPUFreqButton")
focus_neighbor_right = NodePath("../GPUFreqMaxSlider")
focus_neighbor_bottom = NodePath("../GPUFreqMaxSlider")
focus_next = NodePath("../GPUFreqMaxSlider")
focus_previous = NodePath("../GPUFreqButton")
text = "Min Freq"
max_value = 0.0
step = 100.0

[node name="GPUFreqMaxSlider" parent="." instance=ExtResource("2_ygeel")]
visible = false
layout_mode = 2
focus_neighbor_left = NodePath("../GPUFreqMinSlider")
focus_neighbor_top = NodePath("../GPUFreqMinSlider")
focus_neighbor_right = NodePath("../GPUTempSlider")
focus_neighbor_bottom = NodePath("../GPUTempSlider")
focus_next = NodePath("../GPUTempSlider")
focus_previous = NodePath("../GPUFreqMinSlider")
text = "Max Freq"
max_value = 0.0
step = 100.0

[node name="GPUTempSlider" parent="." instance=ExtResource("2_ygeel")]
visible = false
layout_mode = 2
focus_neighbor_left = NodePath("../GPUFreqMaxSlider")
focus_neighbor_top = NodePath("../GPUFreqMaxSlider")
focus_neighbor_right = NodePath("../CPUBoostButton")
focus_neighbor_bottom = NodePath("../CPUBoostButton")
focus_next = NodePath("../CPUBoostButton")
focus_previous = NodePath("../GPUFreqMaxSlider")
text = "GPU Temp Limit"
value = 70.0
max_value = 105.0
min_value = 70.0
